--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,32 @@
 /* roboto-regular - latin */
 @font-face {
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  src: url("fonts/roboto-v29-latin-regular.eot"); /* IE9 Compat Modes */
-  src: local(""),
-    url("fonts/roboto-v29-latin-regular.eot?#iefix") format("embedded-opentype"),
-    /* IE6-IE8 */ url("fonts/roboto-v29-latin-regular.woff2") format("woff2"),
-    /* Super Modern Browsers */ url("fonts/roboto-v29-latin-regular.woff")
-      format("woff"),
-    /* Modern Browsers */ url("fonts/roboto-v29-latin-regular.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */ url("fonts/roboto-v29-latin-regular.svg#Roboto")
-      format("svg"); /* Legacy iOS */
+  src: url('fonts/roboto-v29-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/roboto-v29-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('fonts/roboto-v29-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('fonts/roboto-v29-latin-regular.woff')
+      format('woff'),
+    /* Modern Browsers */ url('fonts/roboto-v29-latin-regular.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */ url('fonts/roboto-v29-latin-regular.svg#Roboto')
+      format('svg'); /* Legacy iOS */
 }
 
 :root {
   --primary-green: #092b00;
   --primary-white: #fff;
+  --blue: #1890ff;
+  --text: rgba(0, 0, 0, 0.85);
 }
 
 body {
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: var(--text);
 }
