[ZPM-1] Create blank playground with just name

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
   --primary-green: #092b00;
   --primary-white: #fff;
   --blue: #1890ff;
+  --blue-border: #6ab8fd;
   --text: rgba(0, 0, 0, 0.85);
 }
 
