--- a/src/routes/playgrounds/NewPlayground.css
+++ b/src/routes/playgrounds/NewPlayground.css
@@ -1,11 +1,34 @@
-#new-playground {
-  display: grid;
-  grid-template-columns: repeat(6, [col-start] 1fr);
-
-  margin: 126px 260px 327px 232px;
-  padding: 20px 100px;
+#new-playground-window {
+  grid-column: 3 / span 7;
+  grid-row: 2 / span 3;
   border: 1px solid var(--blue-border);
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+}
+
+#new-playground {
+  display: grid;
+  grid-template-columns: repeat(12, [col-start] 1fr);
+  grid-template-rows: repeat(5, [row-start] 1fr);
+}
+
+.field-name {
+  grid-column: 2 / span 3;
+  grid-row: 2 / span 1;
+  text-align: right;
+}
+.field-name-input {
+  grid-column: 5 / span 7;
+  grid-row: 2 / span 1;
+  text-align: left;
+  padding-left: 1rem;
+}
+.create-button {
+  grid-column: 6 / span 2;
+  grid-row: 4 / span 1;
+}
+
+label {
+  font-size: 14px;
 }
