[ZPM-1] Styled new playground form

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,8 @@
   --primary-white: #fff;
   --blue: #1890ff;
   --blue-border: #6ab8fd;
+  --gray-1: #fafafa;
+  --gray-2: #d9d9d9;
   --text: rgba(0, 0, 0, 0.85);
 }
 
