--- a/src/routes/playgrounds/NewPlayground.css
+++ b/src/routes/playgrounds/NewPlayground.css
@@ -10,25 +10,93 @@
 #new-playground {
   display: grid;
   grid-template-columns: repeat(12, [col-start] 1fr);
-  grid-template-rows: repeat(5, [row-start] 1fr);
+  grid-template-rows: repeat(7, [row-start] 1fr);
+}
+
+.field-label {
+  grid-column: 1 / span 3;
+  text-align: right;
+  font-size: 14px;
+  line-height: 28px;
+}
+.field-value {
+  grid-column: 4 / span 8;
+  text-align: left;
+  line-height: 28px;
+}
+.field-value input {
+  background: var(--primary-white);
+  border: 1px solid var(--gray-2);
+  box-sizing: border-box;
+  border-radius: 2px;
+  margin: 0;
+  padding: 5px 12px;
+}
+.field-value input::placeholder {
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .field-name {
-  grid-column: 2 / span 3;
   grid-row: 2 / span 1;
-  text-align: right;
 }
 .field-name-input {
-  grid-column: 5 / span 7;
   grid-row: 2 / span 1;
-  text-align: left;
   padding-left: 1rem;
 }
-.create-button {
-  grid-column: 6 / span 2;
-  grid-row: 4 / span 1;
+.field-name-input input {
+  width: 100%;
 }
 
-label {
+.field-dimensions {
+  grid-row: 4 / span 1;
+}
+.field-dimensions-input {
+  grid-row: 4 / span 1;
+  padding-left: 1rem;
+
+  display: flex;
+  flex-flow: row;
+}
+
+.dimension {
+  display: flex;
+  flex-flow: row;
   font-size: 14px;
+  margin: 0 14px 0 0;
+}
+.dimension label {
+  background: var(--gray-1);
+  box-shadow: inset 1px 0px 0px var(--gray-2), inset 0px 1px 0px var(--gray-2),
+    inset 0px -1px 0px var(--gray-2);
+  border-radius: 2px 0px 0px 2px;
+  text-align: center;
+  padding: 5px 12px 4px 12px;
+  margin: 0;
+  height: 19px;
+  line-height: 19px;
+}
+.dimension input {
+  border-radius: 0px 2px 2px 0px;
+  width: 57px;
+  height: 28px;
+}
+
+.create-button {
+  grid-column: 6 / span 2;
+  grid-row: 6 / span 1;
+}
+
+.create-button input {
+  padding: 5px 16px;
+  background-color: var(--blue);
+  box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.043);
+  border: 0;
+  border-radius: 2px;
+  margin: 0;
+  font-size: 14px;
+  color: var(--primary-white);
+  cursor: pointer;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
 }
