--- a/src/routes/playgrounds/NewPlayground/Section.css
+++ b/src/routes/playgrounds/NewPlayground/Section.css
@@ -1,7 +1,7 @@
 .new-playground-section {
   position: relative;
   height: 100%;
-  background: url('../../images/interior-office.svg');
+  background: url('../../../images/interior-office.svg');
   background-position: center;
   background-repeat: no-repeat;
 }
