--- a/src/index.css
+++ b/src/index.css
@@ -198,13 +198,35 @@ h6 {
   line-height: 1.188rem;
 }
 
+input[type='text'] {
+  border-bottom: 0.125rem solid var(--black);
+  border-top: 0.125rem solid var(--primary-white);
+  border-right-style: hidden;
+  border-left-style: hidden;
+  height: 2.063rem;
+  width: 19.5rem;
+  font-size: 0.75rem;
+  line-height: 0.938px;
+  font-weight: 600;
+}
+input::placeholder {
+  color: var(--gray-2);
+  font-weight: 600;
+  font-style: normal;
+}
+input[type='text']:focus {
+  border: 0.125rem solid var(--purple-1);
+  border-radius: 0.5rem;
+  outline: none;
+}
+
 button {
   font-weight: 600;
   font-size: 1rem;
   line-height: 1.25rem;
 
   border: 0.063rem solid var(--black);
-  border-radius: 0.375rem;
+  border-radius: 0.5rem;
   background-color: var(--primary-white);
   padding: 0.5rem 2rem;
 }
