--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -1,10 +1,15 @@
 .wrapper {
   display: grid;
   grid-template-columns: repeat(12, [col-start] 1fr);
+  grid-template-rows: 6.313rem 1fr;
+  row-gap: 0.15rem;
   grid-template-areas:
     'header'
     'sidebar'
     'content';
+
+  width: 100%;
+  height: 100%;
 }
 
 header {
@@ -60,6 +65,9 @@ header h1 {
   grid-area: content;
   grid-column: col-start 3 / span 10;
   grid-row: 2 / 4;
+
+  width: 100%;
+  height: 100%;
 }
 
 #main {
@@ -68,4 +76,6 @@ header h1 {
 
 #sandbox {
   margin: 0 0 0 2px;
+  width: 100%;
+  height: 100%;
 }
