[ZPM-4] - Sidebar WIP, no icons

--- a/src/components/MenuTabs.css
+++ b/src/components/MenuTabs.css
@@ -32,3 +32,28 @@ button#objects {
 button.active {
   background-color: #21FFAE;
 }
+
+.accordion_item {
+  display: inline-block;
+}
+
+.accordion_item .button {
+  border: none;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12px;
+  line-height: 15px;
+  /* identical to box height */
+
+  text-align: center;
+
+  color: #434343;
+}
+.items_wrapper {
+  height: 0;
+  overflow: hidden;
+}
+.items_wrapper.open {
+  height: auto;
+}
