--- a/src/components/MenuTabs.css
+++ b/src/components/MenuTabs.css
@@ -12,21 +12,49 @@
 }
 
 button#layout {
-  padding: 0.25rem;
+  padding: 0.25rem 1rem;
   border-radius: 8px 0px 0px 8px;
   font-size: 0.75rem;
-}
 
-button#toolbox {
-  padding: 0.25rem;
-  border-radius: 0px;
-  font-size: 0.75rem;
+  position: static;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+
+  text-align: center;
+  text-transform: uppercase;
+  color: #000000;
+
+  flex: none;
+  order: 0;
+  flex-grow: 1;
+  margin: auto;
 }
 
 button#objects {
-  padding: 0.25rem;
+  padding: 0.25rem 1rem;
   border-radius: 0px 8px 8px 0px;
   font-size: 0.75rem;
+
+  position: static;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+
+  text-align: center;
+  text-transform: uppercase;
+  color: #000000;
+
+  flex: none;
+  order: 0;
+  flex-grow: 1;
+  margin: auto;
 }
 
 button.active {
