--- a/src/components/ShoppingList.css
+++ b/src/components/ShoppingList.css
@@ -52,6 +52,8 @@
   border: 0.063rem solid var(--black);
   border-top: 0;
   visibility: visible;
+  min-height: 4rem;
+  padding: 0.5rem;
 }
 
 #shopping-list ul {
