--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -59,6 +59,9 @@
   border: 1px solid var(--black);
   border-radius: 0.375rem;
   margin: 1px 0 0;
+
+  overflow-y: scroll;
+  scrollbar-width: thin;
 }
 
 .wrapper #content {
