--- a/src/components/Sidebar/MenuTabs.css
+++ b/src/components/Sidebar/MenuTabs.css
@@ -7,8 +7,8 @@
   margin: 1rem;
 }
 
-.contentSection {
-  padding-top: 0.25rem;
+.content-section {
+  padding-top: 0.5rem;
 }
 
 button#layout {
@@ -58,7 +58,7 @@ button#objects {
 }
 
 button.active {
-  background-color: #21FFAE;
+  background-color: #21ffae;
 }
 
 .accordion_item .button {
