--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -53,12 +53,13 @@
 
 #sidebar {
   grid-area: sidebar;
-  grid-column: col-start / span 2;
+  grid-column: col-start / span 3;
   grid-row: 2 / 4;
 
   border: 1px solid var(--black);
   border-radius: 0.375rem;
   margin: 1px 0 0;
+  padding: 1.563rem;
 
   overflow-y: scroll;
   scrollbar-width: thin;
@@ -66,7 +67,7 @@
 
 .wrapper #content {
   grid-area: content;
-  grid-column: col-start 3 / span 10;
+  grid-column: col-start 4 / span 9;
   grid-row: 2 / 4;
 
   width: 100%;
