--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -59,7 +59,7 @@
   border: 1px solid var(--black);
   border-radius: 0.375rem;
   margin: 1px 0 0;
-  padding: 1.563rem;
+  padding: 1.563rem 0 1.563rem 1.563rem;
 
   overflow-y: scroll;
   scrollbar-width: thin;
