[ZPM-7] Fix shopping list opacity

--- a/src/components/ShoppingList.css
+++ b/src/components/ShoppingList.css
@@ -49,6 +49,7 @@
 }
 
 .shopping-list-body {
+  background-color: var(--primary-white);
   border: 0.063rem solid var(--black);
   border-top: 0;
   visibility: visible;
