--- a/ui/src/components/ControlPanel/ControlPanel.css
+++ b/ui/src/components/ControlPanel/ControlPanel.css
@@ -2,11 +2,16 @@
   height: 80%;
   width: 14.063rem;
   position: absolute;
-  right: 15rem;
-  top: 10%;
+  right: 0.5rem;
+  top: 15%;
   transition: all 1s;
 }
-#control-panel.hidden {
+#control-panel.hide {
+  top: 95%;
+  transition: all 1s;
+  height: 0px;
+}
+#control-panel.minimize {
   top: 95%;
   transition: all 1s;
 }
@@ -43,13 +48,24 @@
   padding: 0;
   text-align: center;
   text-transform: uppercase;
+  cursor: pointer;
 }
-#control-panel.hidden h2::after {
+#control-panel.minimize h2::after {
   content: url('../../images/triangle.svg');
 }
+#control-panel.hide h2 {
+  background-color: var(--gray-1);
+}
+#control-panel.hide h2 button {
+  background-color: var(--gray-1);
+  cursor: auto;
+}
+#control-panel.hide h2::after {
+  content: none;
+}
 
-.shopping-list-body {
-  background-color: var(--primary-white);
+.control-panel-body {
+  background-color: var(--gray-4);
   border: 0.063rem solid var(--black);
   border-top: 0;
   visibility: visible;
@@ -57,20 +73,54 @@
   padding: 0.5rem;
 }
 
-#control-panel ul {
-  margin: 0;
+.control-panel-section {
+  background: #ffffff;
+  border-radius: 8px;
+  padding: 0.5rem 0.8rem;
+  margin: 10px 0px;
 }
 
-#control-panel ul {
-  padding: 0 0 0 0.5rem;
+.control-panel-section * h3 {
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: bold;
+  color: var(--black);
 }
-#control-panel li {
-  list-style-type: none;
+
+.control-panel-section h4 {
+  font-size: 10px;
+  line-height: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: var(--black);
 }
-#control-panel li input[type='checkbox'] {
-  margin: 0 0.5rem 0.625rem 0;
-  height: 1rem;
-  width: 1rem;
-  border-radius: 0.313rem;
-  border: 0.063rem solid var(--black);
+
+.item-description img {
+  width: 62px;
+  height: 62px;
+}
+
+.item-description {
+  display: flex;
+}
+
+.item-description p {
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 12px;
+}
+
+.item-description * {
+  margin: 5px;
+}
+
+.transform img {
+  width: 16px;
+  height: 18px;
+  cursor: pointer;
+}
+
+.delete-button {
+  all: unset;
+  display: inline-block;
 }
