--- a/ui/src/components/Sidebar/ItemIcon.css
+++ b/ui/src/components/Sidebar/ItemIcon.css
@@ -8,9 +8,8 @@
   font-weight: 600;
   text-align: center;
 
-  height: 5rem;
-  width: 5rem;
+  width: 100%;
 
   padding: 0.25rem;
-  margin: 0 2.375rem 1.75rem 0;
+  margin: 0px 5px 10px 0px;
 }
