--- a/ui/src/components/Layout.css
+++ b/ui/src/components/Layout.css
@@ -53,21 +53,31 @@
 
 #sidebar {
   grid-area: sidebar;
-  grid-column: col-start / span 3;
+  grid-column: col-start / span 2;
   grid-row: 2 / 4;
 
   border: 1px solid var(--black);
-  border-radius: 0.375rem;
-  margin: 1px 0 0;
   padding: 1.563rem 0 1.563rem 1.563rem;
 
   overflow-y: scroll;
   scrollbar-width: thin;
 }
 
+#inventory-sidebar {
+  grid-area: sidebar;
+  grid-column: 11 / span 2;
+  grid-row: 2 / 4;
+
+  overflow-y: scroll;
+  scrollbar-width: thin;
+
+  border: 1px solid var(--black);
+  position: relative;
+}
+
 .wrapper #content {
   grid-area: content;
-  grid-column: col-start 4 / span 9;
+  grid-column: col-start 3 / span 8;
   grid-row: 2 / 4;
 
   width: 100%;
@@ -79,7 +89,6 @@
 }
 
 #sandbox {
-  margin: 0 0 0 2px;
   width: 100%;
   height: 100%;
 }
