--- a/ui/src/components/Inventory.css
+++ b/ui/src/components/Inventory.css
@@ -5,11 +5,17 @@
 }
 #inventory-header {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 0.5rem 1rem;
   border-bottom: 1px solid var(--black);
   width: 75%;
+}
+#inventory-header button {
+  font-size: 0.75rem;
+  cursor: pointer;
+  padding: 0.1rem 1rem;
 }
 
 #inventory-header h2 {
@@ -52,6 +58,8 @@
   width: 1rem;
   border-radius: 0.313rem;
   border: 0.063rem solid var(--black);
+
+  cursor: pointer;
 }
 
 #inventory-list span {
