--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -239,6 +239,8 @@ a.button {
   border: 0.063rem solid var(--black);
   border-radius: 0.5rem;
   padding: 0.5rem 2rem;
+
+  cursor: pointer;
 }
 a.button {
   text-decoration: none;
@@ -297,7 +299,7 @@ input[type='submit'] {
   color: white;
 }
 
-input[type="checkbox"]:checked {
+input[type='checkbox']:checked {
   background-color: var(--green-1);
 }
 
