--- a/ui/src/components/ControlPanel/ControlPanel.css
+++ b/ui/src/components/ControlPanel/ControlPanel.css
@@ -73,7 +73,8 @@
   visibility: visible;
   min-height: 4rem;
   padding: 0.5rem;
-  height: 100%;
+  height: calc(100% - 50px);
+  overflow-y: scroll;
 }
 
 .control-panel-section {
