--- a/ui/src/components/Inventory.css
+++ b/ui/src/components/Inventory.css
@@ -37,9 +37,8 @@
   border-top: 0;
   visibility: visible;
   min-height: 4rem;
-  padding: 0.5rem;
-  width: 100%;
-  margin-left: 10%;
+  padding: 5%;
+  width: 90%;
 }
 
 #inventory-list ul {
