--- a/ui/src/components/Layout.css
+++ b/ui/src/components/Layout.css
@@ -1,4 +1,13 @@
 .wrapper {
+  display: grid;
+  grid-template-columns: repeat(12, [col-start] 1fr);
+  grid-template-rows: 6.313rem 1fr;
+  row-gap: 0.15rem;
+  grid-template-areas:
+    'header'
+    'sidebar'
+    'content';
+
   width: 100%;
   height: 100%;
 }
@@ -42,36 +51,33 @@
   text-align: right;
 }
 
-#playground-wrapper {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  height: calc(99% - 6.313rem);
-  overflow: hidden;
+#sidebar {
+  grid-column: col-start / span 2;
+  grid-row: 2 / 4;
+
+  border: 1px solid var(--black);
+  padding: 1.563rem 0 1.563rem 1.563rem;
+
+  overflow-y: scroll;
+  scrollbar-width: thin;
 }
 
-#sidebar-wrapper {
-  transition: all 0.2s;
-  position: relative;
-  width: 400px;
-  margin: 0px 20px 0px 0px;
-}
-#sidebar-wrapper.hidden {
-  transition: all 0.2s;
-  width: 0%;
-}
+#inventory-sidebar {
+  grid-column: 11 / span 2;
+  grid-row: 2 / 4;
 
-#inventory-sidebar-container {
-  transition: all 0.2s;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+
+  border: 1px solid var(--black);
   position: relative;
-  width: 30%;
-}
-#inventory-sidebar-container.hidden {
-  transition: all 0.2s;
-  width: 0%;
 }
 
 .wrapper #content {
+  grid-area: content;
+  grid-column: col-start 3 / span 8;
+  grid-row: 2 / 4;
+
   width: 100%;
   height: 100%;
 }
