--- a/ui/src/components/Sidebar/SidebarTabs.css
+++ b/ui/src/components/Sidebar/SidebarTabs.css
@@ -1,26 +1,12 @@
-#sidebar {
-  border: 1px solid var(--black);
-  padding: 0 0.5rem 0 0.5rem;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-#sidebar.hidden {
-  display: none;
-}
 .sidebar-menu-tabs {
   display: inline-block;
+  width: 100%;
   overflow: hidden;
-
-  overflow-y: scroll;
-  scrollbar-width: thin;
-  padding: 1.563rem 0 1rem 0;
 }
 
 .content-section {
   padding-top: 0.5rem;
   padding-right: 0.5rem;
-  overflow-x: hidden;
 }
 
 .sidebar-menu-tabs button {
@@ -46,31 +32,4 @@ button#objects {
 
 button.active {
   background-color: var(--green-1);
-}
-
-#minimize-sidebar {
-  position: absolute;
-  bottom: -2px;
-
-  width: 19px;
-  padding: 1px 1px 1px 15px;
-  text-align: right;
-  right: 0px;
-  border-radius: 0.5rem 0rem 0rem 0.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#minimize-sidebar.hidden {
-  right: -18px;
-  border-radius: 0rem 0.5rem 0.5rem 0rem;
-  align-items: center;
-}
-
-#minimize-sidebar img {
-  width: 20px;
-}
-
-#minimize-sidebar span {
-  font-size: 10px;
 }
