--- a/ui/src/components/Layout.css
+++ b/ui/src/components/Layout.css
@@ -90,3 +90,14 @@
   width: 100%;
   height: 100%;
 }
+
+.frf-trigger-button {
+  padding: 5px;
+  right: 5px;
+  bottom: 5px;
+}
+
+.frf-modal-container {
+  bottom: 50px;
+  right: 5px;
+}
