--- a/ui/src/routes/playgrounds/ShowPlayground.css
+++ b/ui/src/routes/playgrounds/ShowPlayground.css
@@ -2,3 +2,14 @@
   height: 100%;
   width: 100%;
 }
+
+.frf-trigger-button {
+  padding: 5px;
+  right: 5px;
+  bottom: 5px;
+}
+
+.frf-modal-container {
+  bottom: 50px;
+  right: 5px;
+}
