--- a/ui/src/routes/Home.css
+++ b/ui/src/routes/Home.css
@@ -38,16 +38,22 @@
 .home-wrapper #header-auth {
   grid-column: 9 / 12;
   grid-row: 1 / 1;
+
+  display: flex;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
 }
 
 .home-wrapper #header-auth button {
-  margin: 2.313rem 7.375rem auto auto;
   float: right;
   height: 2.25rem;
+  margin: 5px;
+  width: 175px;
 }
 
 .home-wrapper #header-auth a {
-  margin: 2.313rem 7.375rem auto auto;
   float: right;
   height: 2.25rem;
 
