--- a/ui/src/components/Toolbar/Toolbar.css
+++ b/ui/src/components/Toolbar/Toolbar.css
@@ -10,8 +10,25 @@
   padding: 5px;
 }
 
+#toolbar button.text {
+  /* border-radius: 0.5rem;
+  border: 1px solid black; */
+
+  display: inline-block;
+  font-weight: 600;
+  font-size: 1rem;
+  line-height: 1.25rem;
+  border: 0.063rem solid var(--black);
+  border-radius: 0.5rem;
+  padding: 0.5rem 2rem;
+  cursor: pointer;
+  line-height: 1rem;
+  padding: 0.25rem 1rem;
+  margin: 0 0.25rem;
+}
+
 #toolbar a.tool {
-  all: unset;
+  /* all: unset; */
   display: inline-block;
   cursor: pointer;
   padding: 5px;
