--- a/ui/src/routes/Home.css
+++ b/ui/src/routes/Home.css
@@ -88,6 +88,10 @@
 #intro h2 {
   margin: 0.5rem 0;
 }
+#intro h4 {
+  font-size: 1rem;
+  margin: 0px;
+}
 #intro p {
   margin: 1.688rem 0 2.063rem 0;
   font-size: 1.25rem;
