--- a/ui/src/components/Layout.css
+++ b/ui/src/components/Layout.css
@@ -12,6 +12,19 @@
   height: 100%;
 }
 
+.wrapper.demo {
+  display: grid;
+  grid-template-columns: repeat(12, [col-start] 1fr);
+  grid-template-rows: unset;
+  grid-template-areas:
+    'header'
+    'sidebar'
+    'content';
+
+  width: 100%;
+  height: 100%;
+}
+
 .wrapper header {
   grid-column: col-start / span 12;
   grid-row: 1 / 2;
