add Open Shopping Cart coming soon page

--- a/ui/src/components/Inventory.css
+++ b/ui/src/components/Inventory.css
@@ -12,6 +12,16 @@
   border-bottom: 1px solid var(--black);
   width: 75%;
 }
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+.buttons button {
+  margin: 0.1rem;
+}
+
 #inventory-header button {
   font-size: 0.75rem;
   cursor: pointer;
